@@ -1,0 +1,4 @@
+### BTest baseline data generated by btest-diff. Do not edit. Use "btest -U/-u" to update. Requires BTest >= 0.63.
+default, [v=[1, 2, 3, 100], r=[c=101]]
+after changing, [v=[1, 2, 3, 100, 4711], r=[c=42]]
+after delete, [v=[1, 2, 3, 102], r=[c=103]]
